# vibekernel

./: README.md  full_claude_interaction.txt  pyproject.toml  test_kernel.py
vibekernel/: __init__.py  __main__.py  install.py  kernel.py
