[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibekernel"
version = "0.1.0"
description = "A Jupyter kernel for the Hy language"
authors = [
    {name = "vibekernel"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.0",
    "hy>=1.0.0",
]
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/vibekernel"

[project.scripts]
install-vibekernel = "vibekernel:install"

[tool.hatch.build.targets.wheel]
packages = ["vibekernel"]